--- a/week3_task2_fine_tuning_clean.ipynb
+++ b/week3_task2_fine_tuning_clean.ipynb
@@ -46,9 +46,7 @@
     "colab": {
       "name": "week3_task2_fine_tuning_clean.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "6DxHiZqnTq6e"
-      ],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -284,10 +282,10 @@
       },
       "source": [
         "# token expires every 30 min\n",
-        "COURSERA_TOKEN = \"RSr7uST1mSfAHHHD\"\n",
-        "COURSERA_EMAIL = \"gabor.bakos.uni@gmail.com\""
+        "COURSERA_TOKEN = \"\"\n",
+        "COURSERA_EMAIL = \"\""
       ],
-      "execution_count": 9,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -1758,7 +1756,7 @@
         "outputId": "8c3b7a96-605a-4483-feff-4d988ede1c64",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 1000
         }
       },
       "source": [
@@ -1776,7 +1774,7 @@
         "    initial_epoch=last_finished_epoch or 0\n",
         ")"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -1785,9 +1783,98 @@
             "\n",
             "\n",
             "Epoch 1/16\n",
-            "***"
+            "**************************\n",
+            "loss: 4.4615; accuracy: 0.1756; val_loss: 35.2807; val_accuracy: 0.0677\n",
+            "Model saved in flowers.000.hdf5\n",
+            "\n",
+            "Epoch 2/16\n",
+            "**************************\n",
+            "loss: 2.5280; accuracy: 0.4338; val_loss: 5.9445; val_accuracy: 0.3724\n",
+            "Model saved in flowers.001.hdf5\n",
+            "\n",
+            "Epoch 3/16\n",
+            "**************************\n",
+            "loss: 1.5018; accuracy: 0.6319; val_loss: 1.9370; val_accuracy: 0.6562\n",
+            "Model saved in flowers.002.hdf5\n",
+            "\n",
+            "Epoch 4/16\n",
+            "**************************\n",
+            "loss: 1.0577; accuracy: 0.7238; val_loss: 0.7431; val_accuracy: 0.7344\n",
+            "Model saved in flowers.003.hdf5\n",
+            "\n",
+            "Epoch 5/16\n",
+            "**************************\n",
+            "loss: 0.7444; accuracy: 0.7884; val_loss: 1.0616; val_accuracy: 0.8101\n",
+            "Model saved in flowers.004.hdf5\n",
+            "\n",
+            "Epoch 6/16\n",
+            "**************************\n",
+            "loss: 0.6552; accuracy: 0.8325; val_loss: 0.9203; val_accuracy: 0.8776\n",
+            "Model saved in flowers.005.hdf5\n",
+            "\n",
+            "Epoch 7/16\n",
+            "**************************\n",
+            "loss: 0.5156; accuracy: 0.8852; val_loss: 0.1267; val_accuracy: 0.9245\n",
+            "Model saved in flowers.006.hdf5\n",
+            "\n",
+            "Epoch 8/16\n",
+            "**************************\n",
+            "loss: 0.4212; accuracy: 0.8910; val_loss: 0.2470; val_accuracy: 0.8984\n",
+            "Model saved in flowers.007.hdf5\n",
+            "\n",
+            "Epoch 9/16\n",
+            "**************************\n",
+            "loss: 0.2973; accuracy: 0.9280; val_loss: 0.3315; val_accuracy: 0.9274\n",
+            "Model saved in flowers.008.hdf5\n",
+            "\n",
+            "Epoch 10/16\n",
+            "**************************\n",
+            "loss: 0.2077; accuracy: 0.9603; val_loss: 0.1587; val_accuracy: 0.9297\n",
+            "Model saved in flowers.009.hdf5\n",
+            "\n",
+            "Epoch 11/16\n",
+            "**************************\n",
+            "loss: 0.1324; accuracy: 0.9753; val_loss: 0.1122; val_accuracy: 0.9453\n",
+            "Model saved in flowers.010.hdf5\n",
+            "\n",
+            "Epoch 12/16\n",
+            "**************************\n",
+            "loss: 0.1105; accuracy: 0.9821; val_loss: 0.2590; val_accuracy: 0.9193\n",
+            "Model saved in flowers.011.hdf5\n",
+            "\n",
+            "Epoch 13/16\n",
+            "**************************\n",
+            "loss: 0.0692; accuracy: 0.9895; val_loss: 0.3394; val_accuracy: 0.9190\n",
+            "Model saved in flowers.012.hdf5\n",
+            "\n",
+            "Epoch 14/16\n",
+            "**************************\n",
+            "loss: 0.0647; accuracy: 0.9913; val_loss: 0.2380; val_accuracy: 0.9531\n",
+            "Model saved in flowers.013.hdf5\n",
+            "\n",
+            "Epoch 15/16\n",
+            "**************************\n",
+            "loss: 0.0599; accuracy: 0.9962; val_loss: 0.4298; val_accuracy: 0.9245\n",
+            "Model saved in flowers.014.hdf5\n",
+            "\n",
+            "Epoch 16/16\n",
+            "**************************\n",
+            "loss: 0.0408; accuracy: 0.9999; val_loss: 0.2206; val_accuracy: 0.9583\n",
+            "Model saved in flowers.015.hdf5\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.callbacks.History at 0x7fc842b4ecf8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
         }
       ]
     },
@@ -1795,7 +1882,12 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": false,
-        "id": "P4wWZ0-5Tq6y"
+        "id": "P4wWZ0-5Tq6y",
+        "outputId": "eda57dcf-e16e-48e0-c384-b332a3b4c4f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "## GRADED PART, DO NOT CHANGE!\n",
@@ -1807,21 +1899,42 @@
         "grader.set_answer(\"wuwwC\", test_accuracy)\n",
         "print(test_accuracy)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.9487500190734863\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "scrolled": false,
-        "id": "onj1axDNTq60"
+        "id": "onj1axDNTq60",
+        "outputId": "cea7af03-9fe1-42a9-bf27-b700701a77b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "# you can make submission with answers so far to check yourself at this stage\n",
         "grader.submit(COURSERA_EMAIL, COURSERA_TOKEN)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Submitted to Coursera platform. See results on assignment page!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
