--- a/NumpyNN_(honor).ipynb
+++ b/NumpyNN_(honor).ipynb
@@ -1400,10 +1400,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lrES2eXlJZ6d",
-        "outputId": "6bfdaca1-3a8b-4a52-f00a-6018400c8fa6",
+        "outputId": "27860bb7-6b53-4c79-ce62-49a0d5094e4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 156
+          "height": 139
         }
       },
       "source": [
@@ -1477,10 +1477,9 @@
         "        train_log[name].append(np.mean(nn.predict(X_train)==y_train))\n",
         "        val_log[name].append(np.mean(nn.predict(X_val)==y_val))\n",
         "        clear_output()\n",
-        "        print(epoch)\n",
-        "        print(f\"{' ': <{len(network_names[-1])+1}} {'Training accuracy': <20} {'Validation accuracy': <20}\")\n",
-        "        for (key, training_val_list), validation_val_list in zip(train_log.items(), val_log.values()):\n",
-        "            print(f\"{key:.<{len(network_names[-1])}}: {training_val_list[-1]: <20} {validation_val_list[-1]: <20}\")\n",
+        "        print(f\"{f'Epoch: {epoch}': <{len(network_names[-1])+1}} {'Training accuracy': <20} {'Validation accuracy': <20}\")\n",
+        "        for jdx, ((key, training_val_list), validation_val_list) in enumerate(zip(train_log.items(), val_log.values())):\n",
+        "            print(f\"{key:.<{len(network_names[-1])}}: {training_val_list[-1]: <20} {validation_val_list[-1]: <20}\" + (jdx == idx) * \"     ***Just Updated (below values are from previous epoch)\")\n",
         "\n",
         "        ax[idx, 0].plot(train_log[name], label='train accuracy')\n",
         "        ax[idx, 0].plot(val_log[name], label='val accuracy')\n",
@@ -1501,14 +1500,13 @@
         {
           "output_type": "stream",
           "text": [
-            "3\n",
-            "                             Training accuracy    Validation accuracy \n",
-            "Original....................: 0.97924              0.9695              \n",
+            "Epoch: 4                      Training accuracy    Validation accuracy \n",
+            "Original....................: 0.98324              0.9726              \n",
             "Regularization lambda=0.1...: 0.11356              0.1064              \n",
-            "Regularization lambda=0.01..: 0.90544              0.9131              \n",
-            "Regularization lambda=0.001.: 0.96106              0.9591              \n",
-            "Regularization lambda=0.0001: 0.97188              0.9671              \n",
-            "**********************************"
+            "Regularization lambda=0.01..: 0.89878              0.9069                   ***Just Updated (below values are from previous epoch)\n",
+            "Regularization lambda=0.001.: 0.97076              0.9694              \n",
+            "Regularization lambda=0.0001: 0.9749               0.9682              \n",
+            "*************************************"
           ],
           "name": "stdout"
         }
